--- a/.github/workflows/generate-site.yml
+++ b/.github/workflows/generate-site.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
     - name: Checkout repository
@@ -17,12 +19,13 @@ jobs:
       run: |
         docker run --rm \
           -v "${{ github.workspace }}:/var/model" \
+          -u "$(id -u):$(id -g)" \
           ghcr.io/avisi-cloud/structurizr-site-generatr \
             generate-site \
-            --workspace-file /workspace/workspace.dsl \
+            --workspace-file workspace.dsl \
 
     - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
+      uses: peaceiris/actions-gh-pages@v4
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./build/site/master
